<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="top"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/switchReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hydration_reminder_switch" />

    <EditText
        android:id="@+id/etInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hydration_interval_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/btnSaveReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_settings" />

</LinearLayout>